--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,7 +203,7 @@ button, a { transition: var(--transition); }
 .w-100 { width: 100%; }
 
 .section-subtitle {
-  color: #3880ff; 
+  color: white; 
   font-size: var(--fs-5);
   font-weight: var(--fw-600);
   padding: 5px 20px;
